--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <html>
 <title>This is the Title</title>
 <body>
-<h1 style="align:center;">Hello!</h1>
+	<h1>Hello!</h1>
+	<footer>
+		<h4>Copyright &#169; Me, MySelf & I</h4>
+	</footer>
 </body>
 </html>
